--- a/app/assets/stylesheets/pages/_contact.scss
+++ b/app/assets/stylesheets/pages/_contact.scss
@@ -11,12 +11,10 @@
 
 
 .user-photo{
-  height: 160px;
-  width: 160px;
   margin-right: 30px;
   border-radius: 50%;
   border: 3px solid white;
-  box-shadow: 0 2px 26px 0 rgba(0,0,0,0.2)
+  box-shadow: 0 2px 26px 0 rgba(0,0,0,0.2);
 }
 
 
