--- a/app/assets/stylesheets/pages/_faq.scss
+++ b/app/assets/stylesheets/pages/_faq.scss
@@ -1,6 +1,7 @@
 .infos-container{
   max-width: 1100px;
   margin: 0 auto;
+
 }
 
 
@@ -39,7 +40,6 @@
       }
     }
   }
-
 
   .card-faqs {
     padding-top: 50px;
@@ -122,10 +122,8 @@
   display: flex;
   flex-wrap: wrap;
   .selected-category {
-    font-weight: normal;
-    p {
-      font-weight: bold;
-    }
+    font-weight: bold;
+    background: linear-gradient(#fff, #e4e4e9);
 
   }
 
@@ -263,7 +261,7 @@
   }
 
 
-@media all and (max-width: 768px) {
+@media screen and (max-width: 768px) {
   .infos-container .navigation-menu {
       flex: 0 0 25%;
   }
@@ -278,7 +276,7 @@
 
  }
 
-@media all and (max-width: 480px) {
+@media screen and (max-width: 480px) {
 
   .infos-container .navigation-menu {
       flex: 0 0 100%;
