--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -18,7 +18,7 @@
             <div class="btn-white go-to">Concept</div>
           </a>
           <%= link_to new_user_registration_path, class:"btn-orange cta-link" do %>
-            Découvrir
+            S'inscrire
           <% end %>
         </div>
       </div>
@@ -72,6 +72,42 @@
           <li>Vous ne pouvez pas profiter de la promo</li>
         </ul>
       </div>
+    </div>
+  </div>
+  <div class="testimonies-container">
+    <div class="testimony-box">
+      <h2>
+        <span>Pourquoi Pickalgo ?</span>
+      </h2>
+
+      <div class="testimonies">
+        <div class="testimony">
+          <%= cl_image_tag("1wh4IX4g.jpg", :width=>150, :height=>150, :gravity=>"face", :dpr=>2.0, :radius=>"max", :crop=>"fill", class: "user-photo") %>
+          <h4 class="testimony-title">Jorge, fondateur de Pickalgo</h4>
+          <div class="testimony-text">
+            "Aider les vendeurs à réussir leurs promos, et vous en faire bénéficier avant tout le monde"
+          </div>
+        </div>
+        <div class="testimony">
+          <%= cl_image_tag("1wh4IX4g.jpg", :width=>150, :height=>150, :gravity=>"face", :dpr=>2.0, :radius=>"max", :crop=>"fill", class: "user-photo") %>
+          <h4 class="testimony-title">Jenny, fondatrice de <a href="https://petitvoyou.com" target="_blank">PetitVoyou</a></h4>
+          <div class="testimony-text">
+            "Avec Pickalgo tout le monde y gagne. Je n'envisagerai plus mes promos de la même façon"
+          </div>
+        </div>
+        <div class="testimony">
+          <%= cl_image_tag("1wh4IX4g.jpg", :width=>150, :height=>150, :gravity=>"face", :dpr=>2.0, :radius=>"max", :crop=>"fill", class: "user-photo") %>
+          <h4 class="testimony-title">Mr P, "oiseau précoce" de Pickalgo</h4>
+          <div class="testimony-text">
+            "Utiliser mon avis pour mieux me satisfaire, ça c'est bonne idée !"
+          </div>
+        </div>
+      </div>
+      <%= link_to new_user_registration_path do %>
+        <div class="cta">
+          <div class="btn-orange">S'inscrire</div>
+        </div>
+      <% end %>
     </div>
   </div>
   <%= render 'shared/footer' %>
