add columns first_name and last_name to users, create devise views and change the form with the fileds first_name last name and acceptance of terms of use

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -10,8 +10,7 @@
     <div class="banner-container">
       <div class="banner-content">
         <h1>Devenez testeur de promos !</h1>
-        <p class="concept">Avec Pickalgo, décidez vous-même du prix des promos... et bénficiez-en avant tout le monde !
-        Grâce à vous nous définissons le meilleur prix pour que la promo soit bénéfique aux clients et au vendeur.
+        <p class="concept">Avec Pickalgo, décidez vous-même du prix des promos. Grâce à vous nous définissons le meilleur prix pour que la promo soit bénéfique aux clients et au vendeur... et vous en faisons bénficier avant tout le monde !
         </p>
         <div class="cta-links">
           <a href="#features-container">
