--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,13 +1,22 @@
-<%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <div class="form-inputs">
-    <%= f.input :first_name, label: false, placeholder:'Prénom', autofocus: true %>
-    <%= f.input :last_name, placeholder:'Nom', label: false %>
-    <%= f.input :email, required: true %>
-    <%= f.input :password, label: "Mot de passe", required: true, hint: ("#{@minimum_password_length} caractères minimum" if @minimum_password_length) %>
-     <div class="checkbox-and-text"><%= f.check_box :terms_of_service %>J'accepte les <%= link_to "conditions d'utilisation", cgu_path %></div>
-  </div>
+<div class="page-container">
+  <div class="form-and-image">
+    <div class="registration-form">
+      <h1>Vous inscrire à la beta</h1>
+      <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+        <div class="form-inputs">
+          <%= f.input :first_name, label: false, placeholder:'Prénom', autofocus: true %>
+          <%= f.input :last_name, placeholder:'Nom', label: false %>
+          <%= f.input :email, label: false, placeholder:'Email' %>
+          <%= f.input :password, label: false, placeholder:'Mot de passe', hint: ("#{@minimum_password_length} caractères minimum" if @minimum_password_length) %>
+           <div class="checkbox-and-text"><%= f.check_box :terms_of_service %>J'accepte les <%= link_to "conditions d'utilisation", cgu_path %></div>
+        </div>
 
-  <div class="form-actions">
-    <%= f.button :submit, "C'est parti !", class: "btn-orange" %>
+        <div class="form-actions">
+          <%= f.button :submit, "C'est parti !", class: "btn-orange" %>
+        </div>
+      <% end %>
+    </div>
+    <div class="image-and-text" style="background-image: linear-gradient(rgba(241, 243, 247,1) 50%, transparent 100%), url('https://res.cloudinary.com/djmp0ivep/image/upload/v1538480440/tags.jpg');">
+    </div>
   </div>
-<% end %>
+</div>
