--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -4,16 +4,26 @@
       <h1>Vous inscrire à la beta</h1>
       <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
         <div class="form-inputs">
-          <%= f.input :first_name, label: false, placeholder:'Prénom', autofocus: true %>
-          <%= f.input :last_name, placeholder:'Nom', label: false %>
-          <%= f.input :email, label: false, placeholder:'Email' %>
-          <%= f.input :password, label: false, placeholder:'Mot de passe', hint: ("#{@minimum_password_length} caractères minimum" if @minimum_password_length) %>
-           <div class="checkbox-and-text"><%= f.check_box :terms_of_service %>J'accepte les <%= link_to "conditions d'utilisation", cgu_path %></div>
+          <div id="input-and-icon-first-name">
+            <%= f.input :first_name, label: false, placeholder:'Prénom', autofocus: true %>
+            <span id="icon-firstname" class="fas fa-user"></span>
+          </div>
+          <div id="input-and-icon-last-name">
+            <%= f.input :last_name, placeholder:'Nom', label: false %>
+            <span id="icon-lastname" class="fas fa-user"></span>
+          </div>
+          <div id="input-and-icon-email">
+            <%= f.input :email, label: false, placeholder:'Email' %>
+            <span id="icon-envelope" class="fas fa-envelope"></span>
+          </div>
+          <div id="input-and-icon-password">
+            <%= f.input :password, label: false, placeholder:'Mot de passe', hint: ("#{@minimum_password_length} caractères minimum" if @minimum_password_length) %>
+            <span id="icon-lock" class="fas fa-lock"></span>
+          </div>
+           <div class="checkbox-and-text"><%= f.check_box :terms_of_service %>J'accepte les <%= link_to "conditions d'utilisation", cgu_path %>
+           </div>
         </div>
-
-        <div class="form-actions">
-          <%= f.button :submit, "C'est parti !", class: "btn-orange" %>
-        </div>
+        <%= f.button :submit, "C'est parti !", class: "btn-orange", id:"registration-cta" %>
       <% end %>
     </div>
     <div class="image-and-text" style="background-image: linear-gradient(rgba(241, 243, 247,1) 50%, transparent 100%), url('https://res.cloudinary.com/djmp0ivep/image/upload/v1538480440/tags.jpg');">
