--- a/app/assets/stylesheets/devise/_sign-up.scss
+++ b/app/assets/stylesheets/devise/_sign-up.scss
@@ -1,21 +1,34 @@
 .form-and-image {
   display: flex;
-  height: 100vh;
+  min-height: 100vh;
 }
 
 .registration-form {
   flex: 0 0 50%;
-  padding: 40px 60px;
-  margin: auto;
+  padding: 40px 0;
+}
+
+.form-elements {
+  width: 65%;
+  margin: 50px auto 0 auto;
 }
 
 h1 {
-  margin: 0 0 100px 0;
+  margin: 0 0 20px 0;
+  font-size: 30px;
   text-align: center;
+  color: $blue;
+  text-shadow: -1px 0 white, 0 1px white, 1px 0 white, 0 -1px white;
+}
+
+#beta-limit {
+  font-size: 19px;
+  text-align: center;
+  margin: 20px 0 60px 0;
+  text-shadow: -1px 0 white, 0 1px white, 1px 0 white, 0 -1px white;
 }
 
 .form-inputs {
-  width: 80%;
   margin: auto;
   .fas {
     color: #B5BBC5;
@@ -45,19 +58,55 @@ h1 {
 }
 
 
+.checkbox-and-text {
+  display: flex;
+  align-items: center;
+}
+
 #user_terms_of_service {
-  margin-right: 5px;
+  margin: 0 5px 0 0;
 }
 
 #registration-cta {
   margin: 50px auto;
 }
 
-.image-and-text {
+.image-background {
   flex: 0 0 50%;
-  padding: 0;
+  padding: 40px 60px;
   background-repeat: no-repeat;
   background-size: cover;
+  background-position: center bottom;
+}
+
+
+
+@media all and (max-width: 1280px) {
+
+}
+
+@media all and (max-width: 980px) {
+  .registration-form {
+    flex: 0 0 100%;
+  }
+
+  .image-and-text {
+    display: none;
+  }
+
+}
+
+@media all and (max-width: 736px) {
+
+}
+
+
+@media screen and (max-width: 480px) {
+
+  .registration-form {
+    padding: 20px;
+  }
+
 }
 
 
