--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,32 +1,35 @@
 <div class="page-container">
   <div class="form-and-image">
-    <div class="registration-form">
-      <h1>Vous inscrire à la beta</h1>
-      <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-        <div class="form-inputs">
-          <div id="input-and-icon-first-name">
-            <%= f.input :first_name, label: false, placeholder:'Prénom', autofocus: true %>
-            <span id="icon-firstname" class="fas fa-user"></span>
-          </div>
-          <div id="input-and-icon-last-name">
-            <%= f.input :last_name, placeholder:'Nom', label: false %>
-            <span id="icon-lastname" class="fas fa-user"></span>
-          </div>
-          <div id="input-and-icon-email">
-            <%= f.input :email, label: false, placeholder:'Email' %>
-            <span id="icon-envelope" class="fas fa-envelope"></span>
-          </div>
-          <div id="input-and-icon-password">
-            <%= f.input :password, label: false, placeholder:'Mot de passe', hint: ("#{@minimum_password_length} caractères minimum" if @minimum_password_length) %>
-            <span id="icon-lock" class="fas fa-lock"></span>
-          </div>
-           <div class="checkbox-and-text"><%= f.check_box :terms_of_service %>J'accepte les <%= link_to "conditions d'utilisation", cgu_path %>
-           </div>
-        </div>
-        <%= f.button :submit, "C'est parti !", class: "btn-orange", id:"registration-cta" %>
-      <% end %>
+    <div class="image-background" style="background-image: linear-gradient(rgba(241, 243, 247, 0.6) 50%, transparent 100%), url('https://res.cloudinary.com/djmp0ivep/image/upload/v1538480440/tags.jpg');">
     </div>
-    <div class="image-and-text" style="background-image: linear-gradient(rgba(241, 243, 247,1) 50%, transparent 100%), url('https://res.cloudinary.com/djmp0ivep/image/upload/v1538480440/tags.jpg');">
+    <div class="registration-form">
+      <div class="form-elements">
+        <h1>Pickalgo, c'est pour bientôt</h1>
+        <p id="beta-limit">Inscriptions ouvertes aux 1000 premiers beta testeurs</p>
+        <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+          <div class="form-inputs">
+            <div id="input-and-icon-first-name">
+              <%= f.input :first_name, label: false, placeholder:'Prénom', autofocus: true %>
+              <span id="icon-firstname" class="fas fa-user"></span>
+            </div>
+            <div id="input-and-icon-last-name">
+              <%= f.input :last_name, placeholder:'Nom', label: false %>
+              <span id="icon-lastname" class="fas fa-user"></span>
+            </div>
+            <div id="input-and-icon-email">
+              <%= f.input :email, label: false, placeholder:'Email' %>
+              <span id="icon-envelope" class="fas fa-envelope"></span>
+            </div>
+            <div id="input-and-icon-password">
+              <%= f.input :password, label: false, placeholder:'Mot de passe', hint: ("#{@minimum_password_length} caractères minimum" if @minimum_password_length) %>
+              <span id="icon-lock" class="fas fa-lock"></span>
+            </div>
+             <div class="checkbox-and-text"><%= f.check_box :terms_of_service %>J'accepte les <%= link_to "conditions d'utilisation", cgu_path %>
+             </div>
+          </div>
+          <%= f.button :submit, "C'est parti !", class: "btn-orange", id:"registration-cta" %>
+        <% end %>
+      </div>
     </div>
   </div>
 </div>
