dismiss sweet alert

--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -19,7 +19,7 @@
         <div class="group">
           <div class="box-with-circle-icon"><i class="fas fa-envelope"></i><br></div>
           <h3>Email</h3>
-          <p><a href="mailto:jorge@pickalgo.com?Subject=Hello Pickalgo, <%=  ('ici' + ' ' + current_user.pseudo) if current_user %>" target="_top">jorge@pickalgo.com</a></p>
+          <p><a href="mailto:jorge@pickalgo.com?Subject=Hello Pickalgo, <%=  ('ici' + ' ' + current_user.first_name) if current_user %>" target="_top">jorge@pickalgo.com</a></p>
         </div>
         <div class="group">
           <div class="box-with-circle-icon"><i class="fab fa-whatsapp"></i><br></div>
