--- a/app/assets/stylesheets/devise/_sign-up.scss
+++ b/app/assets/stylesheets/devise/_sign-up.scss
@@ -5,27 +5,27 @@
 
 .registration-form {
   flex: 0 0 50%;
-  padding: 40px 0;
+  padding: 60px 0 0 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-.form-elements {
-  width: 65%;
-  margin: 50px auto 0 auto;
-}
+
 
 h1 {
-  margin: 0 0 20px 0;
-  font-size: 30px;
+  margin: 0px 0 20px 0;
+  font-size: 40px;
   text-align: center;
   color: $blue;
   text-shadow: -1px 0 white, 0 1px white, 1px 0 white, 0 -1px white;
 }
 
 #beta-limit {
-  font-size: 19px;
+  font-size: 17px;
+  color: rgba(51,51,51,0.5);
   text-align: center;
   margin: 20px 0 60px 0;
-  text-shadow: -1px 0 white, 0 1px white, 1px 0 white, 0 -1px white;
 }
 
 .form-inputs {
@@ -52,7 +52,7 @@ h1 {
 #icon-firstname, #icon-lastname, #icon-envelope, #icon-lock {
   &:before {
     position: absolute;
-    top: 8px;
+    top: 10px;
     left: 10px;
   }
 }
@@ -61,6 +61,9 @@ h1 {
 .checkbox-and-text {
   display: flex;
   align-items: center;
+  a {
+    margin-left: 5px;
+  }
 }
 
 #user_terms_of_service {
@@ -90,7 +93,7 @@ h1 {
     flex: 0 0 100%;
   }
 
-  .image-and-text {
+  .image-background {
     display: none;
   }
 
