--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -5,7 +5,7 @@
     <div class="registration-form">
       <div class="form-elements">
         <h1>Pickalgo, c'est pour bientôt</h1>
-        <p id="beta-limit">Inscriptions ouvertes aux 1000 premiers beta testeurs</p>
+        <p id="beta-limit">Inscriptions ouvertes aux 1000 premiers membres</p>
         <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
           <div class="form-inputs">
             <div id="input-and-icon-first-name">
@@ -27,7 +27,7 @@
              <div class="checkbox-and-text"><%= f.check_box :terms_of_service %>J'accepte les <%= link_to "conditions d'utilisation", cgu_path %>
              </div>
           </div>
-          <%= f.button :submit, "C'est parti !", class: "btn-orange", id:"registration-cta" %>
+          <%= f.button :submit, "Je m'inscris", class: "btn-orange", id:"registration-cta" %>
         <% end %>
       </div>
     </div>
