log pages all responsive

--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -22,7 +22,7 @@
           </div>
 
           <div id="reset-password-button">
-            <%= f.button :submit, "Envoyer", class: "btn-orange" %>
+            <%= f.button :submit, "Envoyer", id: "reset-password-cta", class: "btn-orange" %>
           </div>
         <% end %>
       </div>
