--- a/app/assets/stylesheets/devise/_sign-up.scss
+++ b/app/assets/stylesheets/devise/_sign-up.scss
@@ -31,8 +31,8 @@ h1 {
 #beta-limit {
   font-size: 17px;
   color: rgba(51,51,51,0.5);
-  text-align: center;
-  margin: 20px 0 60px 0;
+  text-align: justify;
+  margin: 20px 0;
 }
 
 #new_user, #registrate {
@@ -83,7 +83,7 @@ h1 {
   margin: 0 5px 0 0;
 }
 
-#registration-cta , #connect-cta{
+#registration-cta , #connect-cta, #reset-password-cta{
   margin: 50px auto 0 auto;
 }
 
@@ -139,7 +139,7 @@ h1 {
     width: 100%;
   }
 
-  #registration-cta, #connect-cta {
+  #registration-cta, #connect-cta, #reset-password-cta {
     padding: 10px 30px;
   }
 
