--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -4,9 +4,9 @@
       <div class="logo-beta logo-form"><%= image_tag "logo.png", id: "logo" %><br>©Beta 2018
       </div>
       <div class="form-elements">
-        <h1>Pickalgo, c'est pour bientôt</h1>
-        <p id="beta-limit">Inscriptions ouvertes aux 1000 premiers membres</p>
+        <h1>S'inscrire</h1>
         <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+          <p id="beta-limit">Pickalgo, c'est pour bientôt! Inscriptions ouvertes aux 1000 premiers membres</p>
           <div class="form-inputs">
             <div id="input-and-icon-first-name">
               <%= f.input :first_name, label: false, placeholder:'Prénom', autofocus: true %>
