configured initializer redis, procfile for heroku, AddUserToMArketingListJob

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -6,7 +6,7 @@
       <div class="form-elements">
         <h1>S'inscrire</h1>
         <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-          <p id="beta-limit">Pickalgo, c'est pour bientôt! Inscriptions ouvertes aux 1000 premiers membres</p>
+          <p id="beta-limit">Pickalgo, c'est pour bientôt! Inscriptions ouvertes aux 1000 premiers membres.</p>
           <div class="form-inputs">
             <div id="input-and-icon-first-name">
               <%= f.input :first_name, label: false, placeholder:'Prénom', autofocus: true %>
