--- a/app/views/devise/mailer/reset_password_instructions.html.erb
+++ b/app/views/devise/mailer/reset_password_instructions.html.erb
@@ -1,8 +1,7 @@
-<p>Hello <%= @resource.email %>!</p>
+<h1>Bonjour <%= @resource.first_name %>!</h1>
 
-<p>Someone has requested a link to change your password. You can do this through the link below.</p>
+<p>Comme demandé, vous trouverez-ci dessous un lien pour ré-initialiser votre mot de passe sur <b>Pickalgo</b></p>
 
-<p><%= link_to 'Change my password', edit_password_url(@resource, reset_password_token: @token) %></p>
+<p><%= link_to 'Changer mon mot de passe', edit_password_url(@resource, reset_password_token: @token) %></p>
 
-<p>If you didn't request this, please ignore this email.</p>
-<p>Your password won't change until you access the link above and create a new one.</p>
+<p>Si vous n'êtes pas à l'origine de cette demande, merci d'ignorer ce message.</p>
