--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -2,6 +2,10 @@
   border-bottom: 1px solid #d3d3d3;
 }
 
+.navbar:before, .navbar:after {
+    content: none;
+}
+
 .navbar {
   max-width: 1100px;
   margin: 0 auto;
@@ -10,20 +14,18 @@
   justify-content: space-between;
   height: 70px;
   margin-bottom: 0px;
-
-  &:before , &:after{
-    display: none;
-  }
 }
 
+
+/* User Avatar */
+
 .user-menu{
-  .fa-user {
-    font-size: 17px;
-    background-color: $blue;
-    border-radius: 50%;
-    padding: 10px;
-    color: #FFF;
-    a {
+  cursor: pointer;
+  .fa-bars {
+  font-size: 20px;
+  color: $blue;
+
+  a {
     text-decoration: none;
      &:hover{
       text-decoration: none;
@@ -33,11 +35,13 @@
   }
 }
 
+
+
 /* Dropdown */
 .navbar-dropdown-menu {
   margin-top: 16px;
-  border-color: white;
-  background-color: white;
+  border: 1px solid #d3d3d3;
+  background-color: #FFF;
 
 }
 .navbar-dropdown-menu li > a {
@@ -47,10 +51,13 @@
   font-size: 15px !important;
   line-height: 22px !important;
   padding: 10px 20px;
+  i {
+    margin-right: 5px;
+  }
 }
 .navbar-dropdown-menu li > a:hover {
-  background-color: #6d6c6c !important;
-  color: white !important;
+  background-color: rgba(51, 51, 51, 0.5) !important;
+  color: #FFF !important;
 }
 .navbar-dropdown-menu:before {
   content: ' ';
@@ -58,11 +65,65 @@
   width: 10px;
   position: absolute;
   right: 10px;
-  top: 0px;
-  background-color: white;
+  top: -6px;
+  background-color: #FFF;
   transform: rotate(45deg);
-  border-left: 1px solid rgba(0, 0, 0, 0.15);
-  border-top: 1px solid rgba(0, 0, 0, 0.15);
+  z-index: -1;
+  border-top: 1px solid #d3d3d3;
+  border-left: 1px solid #d3d3d3;
+
+
+}
+
+
+
+
+@media screen and (max-width: 768px) {
+  .navbar {
+    padding: 10px;
+  }
+
+}
+
+
+@media screen and (max-width: 480px) {
+
+
+
+
+
+  .dropdown-menu {
+
+    a {
+
+      .fa-plus {
+        font-size: 15px;
+        color: $blue;
+        padding: 0;
+
+      }
+
+      .fa-hand-lizard {
+        font-size: 15px;
+        color: $blue;
+        padding: 0;
+      }
+
+      &:hover {
+        .fa-plus {
+          background: transparent !important;
+          color: black !important;
+        }
+
+        .fa-hand-lizard {
+          background: transparent !important;
+          color: black !important;
+        }
+      }
+    }
+
+  }
+
 }
 
 
