--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -5,19 +5,36 @@
       <%= image_tag "logo.png", id: "logo" %>
     <% end %>
     <div class="user-menu">
-      <i class="fa fa-user dropdown-toggle" aria-hidden="true" id="dropdown-icon", data-toggle="dropdown"></i>
-      <ul class="dropdown-menu dropdown-menu-right navbar-dropdown-menu">
-        <li>
-          <%= link_to user_path(current_user) do %>
-            <i class="fas fa-cog"></i> <%= t(".profile", default: "Profil") %>
-          <% end %>
-        </li>
-        <li>
-          <%= link_to destroy_user_session_path, method: :delete do %>
-            <i class="fa fa-sign-out-alt"></i>  <%= t(".sign_out", default: "Déconnecter") %>
-          <% end %>
-        </li>
-      </ul>
+      <div class="dropdown">
+        <i class="fas fa-bars dropdown-toggle" aria-hidden="true" id="dropdown-icon", data-toggle="dropdown"></i>
+        <ul class="dropdown-menu dropdown-menu-right navbar-dropdown-menu">
+          <li>
+            <%= link_to user_path(current_user) do %>
+              <i class="fas fa-user-circle"></i> <%= t(".profile", default: "Mon compte") %>
+            <% end %>
+          </li>
+          <li>
+            <%= link_to faq_path do %>
+              <i class="fas fa-question-circle"></i> <%= t(".faq", default: "FAQ") %>
+            <% end %>
+          </li>
+          <li>
+            <%= link_to contact_path do %>
+              <i class="fas fa-envelope"></i> <%= t(".contact", default: "Contact") %>
+            <% end %>
+          </li>
+          <li>
+            <%= link_to mentions_legales_path do %>
+              <i class="fas fa-info-circle"></i> <%= t(".legal", default: "Mentions légales") %>
+            <% end %>
+          </li>
+          <li>
+            <%= link_to destroy_user_session_path, method: :delete do %>
+              <i class="fas fa-power-off"></i>  <%= t(".sign_out", default: "Déconnecter") %>
+            <% end %>
+          </li>
+        </ul>
+      </div>
     </div>
 
   </div>
