--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -47,7 +47,7 @@
 .navbar-dropdown-menu li > a {
   transition: color 0.3s ease;
   font-weight: lighter !important;
-  color: $blue !important;
+  color: #4d4d5e !important;
   font-size: 15px !important;
   line-height: 22px !important;
   padding: 10px 20px;
@@ -56,8 +56,7 @@
   }
 }
 .navbar-dropdown-menu li > a:hover {
-  background-color: rgba(51, 51, 51, 0.5) !important;
-  color: #FFF !important;
+  color: $blue !important;
 }
 .navbar-dropdown-menu:before {
   content: ' ';
