--- a/app/assets/stylesheets/config/_bootstrap_variables.scss
+++ b/app/assets/stylesheets/config/_bootstrap_variables.scss
@@ -143,6 +143,10 @@ input[type=number]::-webkit-outer-spin-button {
   border-radius: 10px;
 }
 
+.page-container {
+  min-height: calc(100vh - 70px - 243px)
+}
+
 @media screen and (max-width: 1200px) {
   .page-container {
       width: 100% !important;
