add navbar and footer on legal pages

--- a/app/views/pages/cgu.html.erb
+++ b/app/views/pages/cgu.html.erb
@@ -1,4 +1,4 @@
-
+<%= render 'shared/navbar' %>
 <div class="page-container">
   <div class="infos-container">
     <%= render 'pages/navigation', page: @page %>
@@ -33,3 +33,4 @@
     </div>
   </div>
 </div>
+<%= render 'shared/footer' %>
