--- a/app/views/pages/mentions_legales.html.erb
+++ b/app/views/pages/mentions_legales.html.erb
@@ -1,4 +1,4 @@
-
+<%= render 'shared/navbar' %>
 <div class="page-container">
   <div class="infos-container">
     <%= render 'pages/navigation', page: @page %>
@@ -30,6 +30,7 @@
     </div>
   </div>
 </div>
+<%= render 'shared/footer' %>
 
 
 
