added friendly id for users

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,4 +1,10 @@
 <%= render 'shared/navbar' %>
 <div class="page-container">
-
+  first name : <%= @user.first_name %>
+  <br>
+  last name : <%= @user.last_name %>
+  <br>
+  email : <%= @user.email %>
+  <br>
+  slug : <%= @user.slug %>
 </div>
