--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,10 +1,61 @@
 <%= render 'shared/navbar' %>
 <div class="page-container">
-  first name : <%= @user.first_name %>
-  <br>
-  last name : <%= @user.last_name %>
-  <br>
-  email : <%= @user.email %>
-  <br>
-  slug : <%= @user.slug %>
+  <div class="content-container">
+    <div class="settings-container">
+      <div class="setting-menu">
+        <div class="menu-link">
+          <a href="#civil">Profil</a>
+        </div>
+        <div class="menu-link">
+          <a href="#security">Sécurité</a>
+        </div>
+      </div>
+      <div class="forms">
+        <div class="edit-user-form" id="civil">
+          <h2>Informations personnelles</h2>
+          <%= simple_form_for @user do |f| %>
+            <div class="form-inputs">
+              <div id="input-and-icon-first-name">
+                <%= f.input :first_name, label: false, placeholder:'Prénom' %>
+                <span id="icon-firstname" class="fas fa-user"></span>
+              </div>
+              <div id="input-and-icon-last-name">
+                <%= f.input :last_name, placeholder:'Nom', label: false %>
+                <span id="icon-lastname" class="fas fa-user"></span>
+              </div>
+              <div id="input-and-icon-email">
+                <%= f.input :email, label: false, placeholder:'Email' %>
+                <span id="icon-envelope" class="fas fa-envelope"></span>
+              </div>
+            </div>
+            <%= f.button :submit, "Enregistrer", class: "btn-blue", id:"save-cta" %>
+          <% end %>
+        </div>
+        <div class="edit-user-form" id="security">
+          <h2>Changer de mot de passe</h2>
+          <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
+            <div class="form-inputs">
+              <div id="input-and-icon-password1">
+                <%= f.input :current_password, required: true, label: false, placeholder: 'Mot de passe actuel'%>
+                <span id="icon-lock1" class="fas fa-lock"></span>
+              </div>
+              <div id="input-and-icon-password">
+                <%= f.input :password, required: true, label: false, placeholder: 'Nouveau mot de passe', hint: ("#{@minimum_password_length} caractères minimum" if @minimum_password_length) %>
+                <span id="icon-lock" class="fas fa-lock"></span>
+              </div>
+              <div id="input-and-icon-password2">
+                <%= f.input :password_confirmation, required: true, label: false, placeholder: 'Confirmer le nouveau mot de passe' %>
+                <span id="icon-lock2" class="fas fa-lock"></span>
+              </div>
+            </div>
+            <%= f.button :submit, "Changer mot de passe", class: "btn-blue", id:"password-cta" %>
+          <% end %>
+        </div>
+      </div>
+    </div>
+
+  </div>
 </div>
+<%= render 'shared/footer' %>
+
+
