--- a/app/assets/stylesheets/components/_buttons.scss
+++ b/app/assets/stylesheets/components/_buttons.scss
@@ -40,6 +40,7 @@
   text-transform: uppercase;
   border-radius: 50px;
   cursor: pointer;
+  border: none;
   color: #FFF;
   background: -webkit-gradient(linear, left top, right bottom, from($blue), to(#3e2995));
   background: linear-gradient($blue, #3e2995);
