--- a/app/assets/stylesheets/devise/_sign-up.scss
+++ b/app/assets/stylesheets/devise/_sign-up.scss
@@ -56,11 +56,11 @@ h1 {
 
 }
 
-#input-and-icon-first-name, #input-and-icon-last-name, #input-and-icon-email, #input-and-icon-password, #input-and-icon-password2 {
+#input-and-icon-first-name, #input-and-icon-last-name, #input-and-icon-email, #input-and-icon-password, #input-and-icon-password1, #input-and-icon-password2 {
   position: relative;
 }
 
-#icon-firstname, #icon-lastname, #icon-envelope, #icon-lock, #icon-lock2 {
+#icon-firstname, #icon-lastname, #icon-envelope, #icon-lock, #icon-lock1, #icon-lock2 {
   &:before {
     position: absolute;
     top: 10px;
