--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -76,11 +76,23 @@
 }
 
 
+@media all and (max-width: 1280px) {
+  .navbar {
+    padding: 10px 20px;
+  }
+}
+
+
+@media all and (max-width: 980px) {
+
+}
+
+
 
 
 @media screen and (max-width: 768px) {
   .navbar {
-    padding: 10px;
+    padding: 10px 20px;
   }
 
 }
