--- a/app/assets/stylesheets/users/show.scss
+++ b/app/assets/stylesheets/users/show.scss
@@ -34,10 +34,10 @@
 }
 
 .forms {
-  background-color: #FFF;
   border: 1px solid #d3d3d3;
   flex: 0 0 80%;
   padding: 40px;
+  background-color: #FFF;
 }
 
 #civil, #security {
@@ -47,11 +47,17 @@
 }
 
 .edit-user-form {
-  width: 50%;
   margin-bottom: 80px;
+  border: 1px solid #2e1e72;
+  padding: 30px;
   &:last-child {
     margin-bottom: 0;
   }
+
+  .form-inputs {
+    width: 50%;
+  }
+
   #new_user {
     width: 100%;
   }
@@ -59,18 +65,71 @@
   h2 {
     margin: 0 0 20px 0;
     font-size: 25px;
+    color: #2e1e72;
   }
 
   .btn-blue {
     margin: 20px 0 0 auto;
+    padding: 7px 20px;
+    text-transform: uppercase;
+  }
+}
+
+@media all and (max-width: 1280px) {
+
+  .content-container {
+    padding: 35px 0;
+  }
+
+  .settings-container {
+    padding: 10px 20px;
   }
 }
 
 
+@media all and (max-width: 980px) {
+
+}
 
 @media screen and (max-width: 768px) {
   .content-container {
-    padding: 10px;
+    padding: 20px;
+  }
+
+  .setting-menu {
+    display: none;
+  }
+
+  .forms {
+    flex: 0 0 100%;
+  }
+
+  .edit-user-form {
+    .form-inputs {
+      width: 100%;
+    }
+  }
+
+}
+
+@media screen and (max-width: 480px) {
+
+  .content-container {
+    padding: 0;
+  }
+  .settings-container {
+    padding: 10px 0;
+  }
+
+  .forms {
+    padding: 15px;
+  }
+
+  .edit-user-form {
+    padding: 15px;
+    .form-inputs {
+      width: 100%;
+    }
   }
 
 }
