--- a/app/assets/stylesheets/config/_bootstrap_variables.scss
+++ b/app/assets/stylesheets/config/_bootstrap_variables.scss
@@ -38,7 +38,7 @@ input[type=number]::-webkit-outer-spin-button {
 }
 
 .dropdown-menu {
-  padding: 6px 0 0 !important;
+  padding: 0px !important;
 }
 
 /* :focus {
