--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -18,7 +18,7 @@ $color4: rgba(224, 224, 226, 1);
 $color5: rgba(50, 2, 31, 1);
 
 $red: #EE5F5B;
-$blue: #1CBCAC;
+$blue: #30AABC;
 $yellow: #F1B255;
 $orange: #ff6d43;
 $green: #32B796;
