--- a/app/assets/stylesheets/pages/_index.scss
+++ b/app/assets/stylesheets/pages/_index.scss
@@ -1,3 +1,4 @@
-@import "pages/home";
-@import "pages/contact";
-@import "pages/faq";
+@import "home";
+@import "contact";
+@import "faq";
+@import 'welcome'
