--- a/app/assets/stylesheets/users/show.scss
+++ b/app/assets/stylesheets/users/show.scss
@@ -4,6 +4,7 @@
   padding: 60px 0;
 }
 
+
 .settings-container {
   display: flex;
   align-items: start;
@@ -48,7 +49,7 @@
 
 .edit-user-form {
   margin-bottom: 80px;
-  border: 1px solid #2e1e72;
+  border: 1px solid $blue;
   padding: 30px;
   &:last-child {
     margin-bottom: 0;
