--- a/app/assets/stylesheets/pages/welcome.scss
+++ b/app/assets/stylesheets/pages/welcome.scss
@@ -37,4 +37,44 @@
   max-width: 450px;
   margin: 40px 0 0 0;
   font-size: 18px;
+  span {
+    color: $orange;
+    text-align: center;
+    font-weight: bold;
+  }
+}
+
+
+@media all and (max-width: 1280px) {
+
+  .launching-infos {
+    padding: 10px 20px;
+  }
+}
+
+
+@media all and (max-width: 980px) {
+
+}
+
+@media screen and (max-width: 768px) {
+
+
+}
+
+@media screen and (max-width: 480px) {
+
+  .launching-infos {
+    padding: 20px;
+  }
+
+  #welcome-title {
+    font-size: 25px;
+  }
+
+  #welcome-text {
+    font-size: 16px;
+  }
+
+
 }
