save initial project

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -504,6 +504,10 @@
         padding: 10px;
       }
 
+      .icon-and-text-no-shaddow {
+        padding: 20px 10px 40px;
+      }
+
 
 
       .quote{
