--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,6 +1,6 @@
 <div class="footer">
   <div class="footer-content">
-    <%= image_tag "white-logo.png", class:"brand" %>
+    <%= image_tag "white-logo.png", class:"brand", alt: "logo pickalgo white" %>
     <p class="beta">©Beta 2018</p>
     <div class="footer-links">
       <div class="footer-left-links">
