review proposition value

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -2,7 +2,8 @@
   <div id="top-link"></div>
   <div class="navbar">
     <%= link_to root_path do %>
-      <%= image_tag "logo.png", id: "logo" %>
+      <div class="logo-beta"><%= image_tag "logo.png", id: "logo", alt: "logo pickalgo color" %><br>©Beta 2018
+      </div>
     <% end %>
     <div class="user-menu">
       <div class="dropdown">
