--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -10,7 +10,7 @@
     <div class="banner-container">
       <div class="banner-content">
         <h1>Devenez testeur de promos !</h1>
-        <p class="concept">Avec Pickalgo, décidez vous-même du prix des promos. Grâce à vous nous définissons le meilleur prix pour que la promo soit bénéfique aux clients et au vendeur... et vous en faisons bénficier avant tout le monde !
+        <p class="concept">Parce qu'un vendeur a souvent du mal à trouver le bon prix pour sa promo, il y a Pickalgo... et vous ! Avec Pickalgo devenez testeur de promos et bénéficiez du meilleur prix avant tout le monde.
         </p>
         <div class="cta-links">
           <a href="#features-container">
@@ -28,16 +28,16 @@
     <div class="steps">
       <div class="icon-and-text-no-shaddow" id="first">
         <%= image_tag "opinion.svg", class: "action-image", alt: "icon image think svg" %>
-        <div class="quote">Vous réfléchissez</div>
+        <div class="quote">Vous proposez</div>
         <div class="step-text">
           Déterminez votre prix plafond. A partir de quel montant la promo commencerait selon vous à être intéressante ?
         </div>
       </div>
       <div class="icon-and-text-no-shaddow" id="second">
         <%= image_tag "choose.svg", class: "action-image", alt: "icon image act svg" %>
-        <div class="quote">Vous proposez</div>
+        <div class="quote">Vous validez</div>
         <div class="step-text">
-          Vous avez 7 jours pour formuler une proposition d'achat correspondant au montant de votre prix plafond
+          Formulez une proposition d'achat correspondant au montant de votre prix plafond
         </div>
       </div>
       <div class="icon-and-text-no-shaddow" id="third">
@@ -84,14 +84,14 @@
           <%= cl_image_tag("1wh4IX4g.jpg", :width=>150, :height=>150, :gravity=>"face", :dpr=>2.0, :radius=>"max", :crop=>"fill", class: "user-photo", alt: "picture photo Jorge Pickalgo founder") %>
           <h4 class="testimony-title">Jorge, fondateur de Pickalgo</h4>
           <div class="testimony-text">
-            "Aider les vendeurs à réussir leurs promos, et vous en faire bénéficier avant tout le monde"
+            "Aider les vendeurs à trouver le meilleur prix pour leurs promos et faire bénéficier nos testeurs des meilleurs prix avant les autres"
           </div>
         </div>
         <div class="testimony">
           <%= cl_image_tag("1wh4IX4g.jpg", :width=>150, :height=>150, :gravity=>"face", :dpr=>2.0, :radius=>"max", :crop=>"fill", class: "user-photo", alt: "picture photo Jenny founder PetitVoyou") %>
           <h4 class="testimony-title">Jenny, fondatrice de <a href="https://petitvoyou.com" target="_blank">PetitVoyou</a></h4>
           <div class="testimony-text">
-            "Avec Pickalgo tout le monde y gagne. Je n'envisagerai plus mes promos de la même façon"
+            "Prix promo trop haut ? Trop bas ? Avec Pickalgo je sais quel pirx ma promo doit offrir pour atteindre mes objectifs et satisfaire mes clients"
           </div>
         </div>
         <div class="testimony">
