save proposition value

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -57,7 +57,7 @@
           <%= image_tag "analyze.svg", class: "action-image", alt: "icon image analyse svg" %>
           <div class="quote-orange">Nous calculons...</div>
           <div class="step-text">
-            la promo optimale au prix minimal qui permet au vendeur de compenser la remise par une augmentation des ventes
+            la promo optimale qui au prix minimal permet de compenser la remise octroyée par une augmentation des ventes
           </div>
         </div>
         <div class="icon-and-text-no-shaddow">
