--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -66,7 +66,7 @@
           <div class="step-text">
             <ul style="padding-left: 0">
               <li>Vous proposiez une promo à 180 €</li>
-              <li>La promo obtimale calculée est à 140 €</li>
+              <li>La promo obtimale est à 140 €</li>
               <li>Vous obtenez le produit pour 140 €</li>
             </ul>
           </div>
@@ -77,7 +77,7 @@
           <div class="step-text">
             <ul style="padding-left: 0">
               <li>Vous proposiez une promo à 135 €</li>
-              <li>La promo optimale calculée est de 140 €</li>
+              <li>La promo optimale est à 140 €</li>
               <li>Vous ne pouvez pas profiter de la promo</li>
             </ul>
           </div>
