add jenny's photo

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -24,7 +24,9 @@
     </div>
   </div>
   <div class="how-it-works" id="features-container">
-    <h3>Un produit vous plaît ?</h3>
+    <h3>Un produit vous plaît ?
+    <br>Décidez du prix de sa promo
+    </h3>
     <div class="steps">
       <div class="icon-and-text-no-shaddow" id="first">
         <%= image_tag "determine.svg", class: "action-image", alt: "icon image think svg" %>
@@ -100,10 +102,10 @@
           </div>
         </div>
         <div class="testimony">
-          <%= cl_image_tag("1wh4IX4g.jpg", :width=>150, :height=>150, :gravity=>"face", :dpr=>2.0, :radius=>"max", :crop=>"fill", class: "user-photo", alt: "picture photo Jenny founder PetitVoyou") %>
+          <%= cl_image_tag("jenny.jpg", :width=>150, :height=>150, :gravity=>"face", :dpr=>2.0, :radius=>"max", :crop=>"fill", class: "user-photo", alt: "picture photo Jenny founder PetitVoyou") %>
           <h4 class="testimony-title">Jenny, fondatrice de <a href="https://petitvoyou.com" target="_blank">PetitVoyou</a></h4>
           <div class="testimony-text">
-            "Prix promo trop haut ? Trop bas ? Avec Pickalgo je sais quel pirx ma promo doit offrir pour atteindre mes objectifs et satisfaire mes clients"
+            "Avec Pickalgo je sais exactement quel prix ma promo doit offrir pour atteindre mes objectifs et satisfaire mes clients"
           </div>
         </div>
         <div class="testimony">
