--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -10,7 +10,7 @@
     <div class="banner-container">
       <div class="banner-content">
         <h1>Devenez testeur de promos !</h1>
-        <p class="concept">Parce qu'un vendeur a souvent du mal à trouver le meilleur prix pour sa promo, il y a Pickalgo... et vous ! Avec Pickalgo devenez testeur de promos et bénéficiez du meilleur prix avant tout le monde.
+        <p class="concept">Parce qu'il est difficile pour un vendeur de trouver le meilleur prix pour sa promo, il y a Pickalgo... et vous ! Avec Pickalgo devenez testeur de promos et bénéficiez du meilleur prix avant tout le monde.
         </p>
         <div class="cta-links">
           <a href="#features-container">
@@ -59,7 +59,7 @@
           <%= image_tag "analyze.svg", class: "action-image", alt: "icon image analyse svg" %>
           <div class="quote-orange">Nous calculons...</div>
           <div class="step-text">
-            la promo optimale qui au prix minimal permet de compenser la remise octroyée par une augmentation des ventes
+            la promo optimale qui permet de compenser la meilleure réduction du prix par une augmentation des ventes
           </div>
         </div>
         <div class="icon-and-text-no-shaddow">
@@ -109,10 +109,10 @@
           </div>
         </div>
         <div class="testimony">
-          <%= cl_image_tag("1wh4IX4g.jpg", :width=>150, :height=>150, :gravity=>"face", :dpr=>2.0, :radius=>"max", :crop=>"fill", class: "user-photo", alt: "picture photo Mr P Pickalgo earlybird") %>
-          <h4 class="testimony-title">Mr P, "oiseau précoce" de Pickalgo</h4>
+          <%= cl_image_tag("do.jpg", :width=>150, :height=>150, :gravity=>"face", :dpr=>2.0, :radius=>"max", :crop=>"fill", class: "user-photo", alt: "picture photo Mr P Pickalgo earlybird") %>
+          <h4 class="testimony-title">Do, "oiseau précoce" de Pickalgo</h4>
           <div class="testimony-text">
-            "Utiliser mon avis pour mieux me satisfaire, ça c'est bonne idée !"
+            "Utiliser mon avis pour mieux me satisfaire, en voilà une bonne idée !"
           </div>
         </div>
       </div>
